<resources>
    <string name="app_name">ShareEase</string>
    <string name="email_mobile_no">Email / Mobile No:</string>
    <string name="tap_to_write">Tap to write</string>
    <string name="login">Login</string>
    <string name="stars">***********</string>
    <string name="password">Password</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appname">appname</string>
    <string name="appicon">AppIcon</string>
    <string name="share_in_for_a_better_tomorrow">Share-in for a better Tomorrow</string>
    <string name="publish">Publish</string>
    <string name="profile">Profile</string>
</resources>